# tc-naf

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
examples/: example.txt  fib.txt  pop.txt  simple.txt  test.txt
src/: alloc.cpp  main.c  main.cpp  parser.hpp  parser.yy  tokenizer.hpp  tokenizer.hpp.in  tokenizer.l  tokens.hpp.in
src/ast/: common.hpp  expressions.hpp  program.cpp  program.hpp  semantic.cpp  statements.hpp
tools/: lemon.c  lempar.c  lempar.cpp
